# agents

./: .gitattributes  .gitignore  README.md  agents.code-workspace  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  qa_database.db  requirements.txt
1_foundations/me/: summary2.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research_autonomous/: DISPLAY_REPORT_FIX.md  HYBRID_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  manager_agent.py  research_manager.py
2_openai/deep_research_workflow/: README.md  deep_research_interactive.py  research_manager.py
3_crew/engineering_team_dynamic/output/: accounts.py  app.py
3_crew/engineering_team_dynamic/src/engineering_team/: crew.py  main.py
3_crew/engineering_team_dynamic/src/engineering_team/config/: agents.yaml  tasks.yaml
3_crew/engineering_team_extended/: pyproject.toml
3_crew/engineering_team_extended/knowledge/: structured_specs.md
3_crew/engineering_team_extended/output/: accounts.py  accounts.py_design.md  app.py
3_crew/engineering_team_extended/src/engineering_team/: main.py
3_crew/market_risk/: README.md  pyproject.toml
3_crew/market_risk/src/market_risk/: crew.py  main.py
3_crew/market_risk/src/market_risk/models/: __init__.py  config.py  schemas.py
3_crew/market_sentiment/: README.md  pyproject.toml
3_crew/market_sentiment/knowledge/glossary/: market_terms.md
3_crew/market_sentiment/knowledge/policies/: risk_policy.md
3_crew/market_sentiment/src/market_sentiment/: crew.py  main.py  models.py  structured_outputs.py
3_crew/market_sentiment/src/market_sentiment/archived/: financial_data_tool_v2.ipynb  financial_data_tool_v2.py  historical_data_tool.ipynb  historical_data_tool_v2.py
3_crew/market_sentiment/src/market_sentiment/config/: agents.yaml  tasks.yaml
3_crew/market_sentiment/src/market_sentiment/tools/: __init__.py  financial_data_tool.py  financial_news_tool.py  historical_data_tool.py  risk_calculation_tool.py  sentiment_analysis_tool.py  social_media_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  memory.db-shm  memory.db-wal
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
guides/: 05_notebooks.ipynb  10_intermediate_python.ipynb
(+4 files in other folders)
