[project]
name = "market_risk"
version = "0.1.0"
description = "market_risk using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
market_risk = "market_risk.main:run"
run_crew = "market_risk.main:run"
train = "market_risk.main:train"
replay = "market_risk.main:replay"
test = "market_risk.main:test"
run_with_trigger = "market_risk.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
