[project]
name = "market_sentiment"
version = "0.1.0"
description = "market_sentiment using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
market_sentiment = "market_sentiment.main:run"
run_crew = "market_sentiment.main:run"
train = "market_sentiment.main:train"
replay = "market_sentiment.main:replay"
test = "market_sentiment.main:test"
run_with_trigger = "market_sentiment.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
